--- a/CalculationProject/CalculationProject/CalculationProject.csproj
+++ b/CalculationProject/CalculationProject/CalculationProject.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AddCommand.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
